# metrosim-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml
api/: CMakeLists.txt  Dockerfile  Makefile  api_server.cpp
core/: CMakeLists.txt  Dockerfile  Makefile
core/include/metro/: astar.h  dijkstra.h  graph.h  route_engine.h  station.h
core/src/: astar.cpp  dijkstra.cpp  graph.cpp  main.cpp  route_engine.cpp
data/: connections.json  demand.csv  stations.json  transfers.json
docs/: STYLE_GUIDE.md
src/: main.cpp
src/core/: connection.h  station.cpp  station.h
src/network/: metro_graph.cpp  metro_graph.h  pathfinder.cpp  pathfinder.h
web/: Dockerfile  index.html  package-lock.json
web/src/: App.tsx  MetroGraph.tsx  README.md  index.css
web/src/components/: MetroGraph.tsx  Sidebar.tsx
web/src/data/: metroData.ts
web/src/hooks/: useMapTransform.ts  useRouteAnimation.ts  useRouteCalculator.ts
web/src/types/: metro.ts
web/src/utils/: dijkstra.ts
